--- a/public/index.html
+++ b/public/index.html
@@ -5,23 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- Edit meta tags for SEO -->
-    <title>DeveloperFolio | Developer Portfolio Template</title>
-    <meta name="title" content="DeveloperFolio | Developer Portfolio Template">
-    <meta name="description" content="Software Developer Portfolio Template that helps you showcase your work and skills as a software developer">
+    <title>Syed Bilal Shah | Professional Portfolio</title>
+    <meta name="title" content="Syed Bilal Shah |Principal Unity Developer • Project Manager • XR • Web3 • Gen AI Engineer">
+    <meta name="description" content="Explore the portfolio of Syed Bilal Shah – an XR/AR/VR developer, Web3 strategist, and Gen AI engineer showcasing technical projects and skills.">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://developerfolio.js.org/">
-    <meta property="og:title" content="DeveloperFolio | Developer Portfolio Template">
-    <meta property="og:description" content="Software Developer Portfolio Template that helps you showcase your work and skills as a software developer">
+    <meta property="og:title" content="Syed Bilal Shah |Principal Unity Developer • Project Manager • XR • Web3 • Gen AI Engineer">
+    <meta property="og:description" content="Explore the portfolio of Syed Bilal Shah – XR/AR/VR, Web3, and Generative AI development.">
+    <meta property="og:url" content="https://bilxao.github.io/portfolio">    
     <!-- Link to a hosted image -->
     <!-- <meta property="og:image" content=""> -->
     
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://developerfolio.js.org/">
-    <meta property="twitter:title" content="DeveloperFolio | Developer Portfolio Template">
-    <meta property="twitter:description" content="Software Developer Portfolio Template that helps you showcase your work and skills as a software developer">
+    <meta property="og:title" content="Syed Bilal Shah |Principal Unity Developer • Project Manager • XR • Web3 • Gen AI Engineer">
+    <meta property="og:description" content="Explore the portfolio of Syed Bilal Shah – XR/AR/VR, Web3, and Generative AI development.">
+    <meta property="og:url" content="https://bilxao.github.io/portfolio">    
     <!-- Link to a hosted image -->
     <!-- <meta property="twitter:image" content=""> -->
 
